// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel injectGlobal extract injectGlobal assign to variable 1`] = `
"import \\"./inject-global.test.emotion.css\\";

const thisWillBeUndefined = undefined;"
`;

exports[`babel injectGlobal extract injectGlobal assign to variable 2`] = `
"body {
    margin: 0;
    padding: 0
}
body > div {
    display: none
}
html {
    background: green
}"
`;

exports[`babel injectGlobal extract injectGlobal basic 1`] = `
"import \\"./inject-global.test.emotion.css\\";

undefined;"
`;

exports[`babel injectGlobal extract injectGlobal basic 2`] = `
"body {
    margin: 0;
    padding: 0
}
body > div {
    display: none
}
html {
    background: green
}"
`;

exports[`babel injectGlobal extract injectGlobal with interpolation 1`] = `
"
injectGlobal([], [display], function createEmotionStyledRules(x0) {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"display\\": x0,
      \\"& > div\\": {
        \\"display\\": \\"none\\"
      }
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal inline dynamic change import 1`] = `
"
import { injectGlobal as inject } from 'emotion';
inject([], [], function createEmotionStyledRules() {
  return [{
    'body': {
      'margin': '0',
      'padding': '0',
      '& > div': {
        'display': '-webkit-box; display: -ms-flexbox; display: flex'
      }
    },
    'html': {
      'background': 'green'
    }
  }];
});
injectGlobal\`
        body {
          margin: 0;
          padding: 0;
          & > div {
            display: flex;
          }
        }
        html {
          background: green;
        }
      \`;"
`;

exports[`babel injectGlobal inline injectGlobal basic 1`] = `
"
injectGlobal([], [], function createEmotionStyledRules() {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"& > div\\": {
        \\"display\\": \\"-webkit-box; display: -ms-flexbox; display: flex\\"
      }
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal inline injectGlobal with interpolation 1`] = `
"
injectGlobal([], [display], function createEmotionStyledRules(x0) {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"display\\": x0,
      \\"& > div\\": {
        \\"display\\": \\"none\\"
      }
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});"
`;

exports[`babel injectGlobal inline static change import 1`] = `
"
inject([], [], function createEmotionStyledRules() {
  return [{
    \\"body\\": {
      \\"margin\\": \\"0\\",
      \\"padding\\": \\"0\\",
      \\"& > div\\": {
        \\"display\\": \\"-webkit-box; display: -ms-flexbox; display: flex\\"
      }
    },
    \\"html\\": {
      \\"background\\": \\"green\\"
    }
  }];
});
injectGlobal\`
        body {
          margin: 0;
          padding: 0;
          & > div {
            display: flex;
          }
        }
        html {
          background: green;
        }
      \`;"
`;
